--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                 </div>
                                 <i class="flaticon-checked"></i>
                             </div>
-                            <h3><a href="/ArtificialIntelligence/">Artificial Intelligence</a></h3>
+                            <h3><a href="ArtificialIntelligence.html">Artificial Intelligence</a></h3>
                             <p>Computer vision  <br>  Natural Language Processing  <br>  Computer Audio</p>
                             <div class="btn-box"><a href="ArtificialIntelligence.html" class="theme-btn style-two">Learn More</a></div>
                         </div>
