--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 </div>
                                 <i class="flaticon-tools-and-utensils"></i>
                             </div>
-                            <h3><a href="/BigDataConsulting/">Big Data Consulting</a></h3>
+                            <h3><a href="BigDataConsulting.html">Big Data Consulting</a></h3>
                             <p>ETL/ELT  <br>  Data quality management  <br>  Data lake</p>
                             <div class="btn-box"><a href="BigDataConsulting.html" class="theme-btn style-two">Learn More</a></div>
                         </div>
