--- a/ArtificialIntelligence.html
+++ b/ArtificialIntelligence.html
@@ -132,7 +132,7 @@
             <div class="content-box">
                 <h1>Artificial Intelligence</h1>
                 <ul class="bread-crumb clearfix">
-                    <li><a href="/service/">Services</a></li>
+                    <li><a href="service.html">Services</a></li>
                     <li>Artificial Intelligence</li>
                 </ul>
             </div>
