--- a/AdvancedDataAnalytics.html
+++ b/AdvancedDataAnalytics.html
@@ -131,7 +131,7 @@
             <div class="content-box">
                 <h1>Advanced Data Analytics</h1>
                 <ul class="bread-crumb clearfix">
-                    <li><a href="/service/">Services</a></li>
+                    <li><a href="service.html">Services</a></li>
                     <li>Advanced Data Analytics</li>
                 </ul>
             </div>
