--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
                             <ul class="list-item clearfix wow slideInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                                 <li>Various Analysis Options</li>
                             </ul>
-                            <div class="btn-box wow slideInUp" data-wow-delay="900ms" data-wow-duration="1500ms"><a href="dcht_website:service" class="theme-btn style-one">Read More</a></div>
+                            <div class="btn-box wow slideInUp" data-wow-delay="900ms" data-wow-duration="1500ms"><a href="service.html" class="theme-btn style-one">Read More</a></div>
                         </div>
                     </div>
                 </div>
