--- a/BigDataConsulting.html
+++ b/BigDataConsulting.html
@@ -133,7 +133,7 @@
             <div class="content-box">
                 <h1>Big Data Consulting</h1>
                 <ul class="bread-crumb clearfix">
-                    <li><a href="/service/">Services</a></li>
+                    <li><a href="service.html">Services</a></li>
                     <li>Big Data Consulting</li>
                 </ul>
             </div>
