--- a/about.html
+++ b/about.html
@@ -238,7 +238,7 @@
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About Us</a></li>
-                                    <li><a href="service.htm">Services</a></li>
+                                    <li><a href="service.html">Services</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
                             </div>
